--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -104,3 +104,19 @@ steps:
     platform: 'Any CPU'
     restoreNugetPackages: true # Optional
     configuration: '$(buildConfiguration)'
+    
+- task: CopyFiles@2
+  displayName: 'Copy packages'
+  condition: and(eq(variables['isMerge'], 'true'), or(eq(variables['srcBranch', 'refs/head/master'], eq(variables[''], 'ref/head/staging')),))
+  inputs:
+    Contents: '**/*.nupkg'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    flattenFolders: true
+
+- task: PublishBuildArtifacts@1
+  displayName: 'Publish artifacts'
+  condition: and(eq(variables['isMerge'], 'true'), or(eq(variables['srcBranch', 'refs/head/master'], eq(variables[''], 'ref/head/staging')),))
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
