--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -106,8 +106,16 @@ steps:
     configuration: '$(buildConfiguration)'
     
 - task: CopyFiles@2
-  displayName: 'Copy packages'
-  condition: and(eq(variables['isMerge'], 'true'), or(eq(variables['srcBranch', 'refs/head/master']), eq(variables[''], 'ref/head/staging')))
+  displayName: 'Copy packages for staging'
+  condition: and(eq(variables['isMerge'], 'true'), eq(variables['srcBranch', 'ref/head/staging'))
+  inputs:
+    Contents: '**/*.*preview*.nupkg'
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+    flattenFolders: true
+    
+- task: CopyFiles@2
+  displayName: 'Copy packages for release'
+  condition: and(eq(variables['isMerge'], 'true'), eq(variables['srcBranch', 'ref/head/master'))
   inputs:
     Contents: '**/*.nupkg'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
@@ -115,7 +123,7 @@ steps:
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish artifacts'
-  condition: and(eq(variables['isMerge'], 'true'), or(eq(variables['srcBranch', 'refs/head/master'], eq(variables[''], 'ref/head/staging')),))
+  condition: and(eq(variables['isMerge'], 'true'), or(eq(variables['srcBranch', 'refs/head/master'], eq(variables['srcBranch'], 'ref/head/staging')),))
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
