--- a/.net/azure-pipelines.yml
+++ b/.net/azure-pipelines.yml
@@ -115,7 +115,7 @@ steps:
     
 - task: CopyFiles@2
   displayName: 'Copy packages for release'
-  condition: and(eq(variables['isMerge'], 'true'), eq(variables['srcBranch', 'ref/head/master'))
+  condition: and(eq(variables['isMerge'], 'true'), eq(variables['srcBranch'], 'ref/head/master'))
   inputs:
     Contents: '**/*.nupkg'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
@@ -123,7 +123,7 @@ steps:
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish artifacts'
-  condition: and(eq(variables['isMerge'], 'true'), or(eq(variables['srcBranch', 'refs/head/master'], eq(variables['srcBranch'], 'ref/head/staging')),))
+  condition: and(eq(variables['isMerge'], 'true'), or(eq(variables['srcBranch'], 'refs/head/master'), eq(variables['srcBranch'], 'ref/head/staging'))))
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'drop'
