Install required packages

--- a/.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/DevSkill.SSLCommerz.Core.csproj
+++ b/.net/src/DevSkill.SSLCommerz/DevSkill.SSLCommerz.Core/DevSkill.SSLCommerz.Core.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;netstandard2.1;net45;net46;</TargetFrameworks>
-		<LangVersion Condition="'$(TargetFramework)'=='net45' Or '$(TargetFramework)'=='net46' Or '$(TargetFramework)'=='netstandard2.0'">
+		<TargetFrameworks>netstandard2.0;netstandard2.1;net452;net462;</TargetFrameworks>
+		<LangVersion Condition="'$(TargetFramework)'=='net452' Or '$(TargetFramework)'=='net462' Or '$(TargetFramework)'=='netstandard2.0'">
 			7.3
 		</LangVersion>
 		<LangVersion Condition="'$(TargetFramework)'=='netstandard2.1'">
@@ -13,8 +13,8 @@
 		<Product>Devskill.SSLCommerz.Core</Product>
 		<PackageId>Devskill.SSLCommerz.Core</PackageId>
 		<PackageVersion>$(Version)</PackageVersion>
-		<AssemblyVersion>$(Version)</AssemblyVersion>
-		<FileVersion>$(Version)</FileVersion>
+		<AssemblyVersion>1.0.0.1</AssemblyVersion>
+		<FileVersion>1.0.0.1</FileVersion>
 		<Version>1.0.0.0-beta2</Version>
 	</PropertyGroup>
 	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' Or '$(TargetFramework)'=='netstandard2.1'">
@@ -23,7 +23,13 @@
 		<Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
 	</ItemGroup>
 	<ItemGroup>
-		<Folder Include="obj\" />
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+		<PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+		<PackageReference Include="System.Net.Http" Version="4.3.4" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
+		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />	
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.DataAnnotations" Version="2.2.0" />
 	</ItemGroup>
 	<ProjectExtensions>
 		<VisualStudio>
