--- a/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection.Autofac/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
+++ b/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection.Autofac/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
@@ -13,30 +13,29 @@
 		<Product>Devskill.SSLCommerz.Core</Product>
 		<PackageId>Devskill.SSLCommerz.Core</PackageId>
 		<PackageVersion>$(Version)</PackageVersion>
-		<AssemblyVersion>1.0.0.14</AssemblyVersion>
-		<FileVersion>1.0.0.14</FileVersion>
+		<AssemblyVersion>1.0.0.15</AssemblyVersion>
+		<FileVersion>1.0.0.15</FileVersion>
 		<Version>1.0.0.1-beta2</Version>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Autofac" Version="4.9.4" />					    
-		<PackageReference Include="Microsoft.Extensions.Http" Version="3.1.0" />	  
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
+		<PackageReference Include="Autofac" Version="4.9.4" />				
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">			 
 		<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.1" />
-		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
-		<PackageReference Include="System.Net.Http" Version="4.3.4" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.1'">
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)'=='net452' Or '$(TargetFramework)'=='net462'">
-		<PackageReference Include="System.Net.Http" Version="4.3.4" />
-	</ItemGroup> 
-	<ItemGroup>
+	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0' Or '$(TargetFramework)'=='netstandard2.1'">
 		<ProjectReference Include="..\DevSkill.SSLCommerz.Core\DevSkill.SSLCommerz.Core.csproj" />
 	</ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)'=='net452' Or '$(TargetFramework)'=='net462'">
+		<Reference Include="..\DevSkill.SSLCommerz.Core\bin\$(Configuration)\$(TargetFramework)\DevSkill.SSLCommerz.Core.dll" />
+	</ItemGroup>
 	<ItemGroup>
-		<Compile Remove="*;*\*" />
+		<Compile Remove="*.cs;*\*.cs" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
 		<Compile Include="Autofac\*.net20.cs" />
