--- a/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection.Autofac/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
+++ b/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection.Autofac/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
@@ -13,8 +13,8 @@
 		<Product>Devskill.SSLCommerz.Core</Product>
 		<PackageId>Devskill.SSLCommerz.Core</PackageId>
 		<PackageVersion>$(Version)</PackageVersion>
-		<AssemblyVersion>1.0.0.15</AssemblyVersion>
-		<FileVersion>1.0.0.15</FileVersion>
+		<AssemblyVersion>1.0.0.16</AssemblyVersion>
+		<FileVersion>1.0.0.16</FileVersion>
 		<Version>1.0.0.1-beta2</Version>
 	</PropertyGroup>
 	<ItemGroup>
@@ -35,7 +35,7 @@
 		<Reference Include="..\DevSkill.SSLCommerz.Core\bin\$(Configuration)\$(TargetFramework)\DevSkill.SSLCommerz.Core.dll" />
 	</ItemGroup>
 	<ItemGroup>
-		<Compile Remove="*.cs;*\*.cs" />
+		<Compile Remove="*.cs;*\*.cs;*\*.*.cs" />
 	</ItemGroup>
 	<ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
 		<Compile Include="Autofac\*.net20.cs" />
