--- a/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
+++ b/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
@@ -1,15 +1,87 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net452;net462;netstandard2.0;netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp2.2;netcoreapp3.0;netcoreapp3.1;net45;net46;</TargetFrameworks>
+		<AssemblyVersion>1.0.0.5</AssemblyVersion>
+		<FileVersion>1.0.0.5</FileVersion>
+		<EnableDefaultContentItems>false</EnableDefaultContentItems>
 	</PropertyGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='netstandard20'">
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+	<ItemGroup>
+		<PackageReference Include="Autofac" Version="4.9.4" />
+		<PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='netstandard21'">
+	<ItemGroup Condition="'$(TargetFramework)'=='netstandard20'">  
+		<PackageReference Include="Autofac.Extensions.DependencyInjection">
+			<Version>5.0.1</Version>
+		</PackageReference>		   
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+		<PackageReference Include="Autofac.Extensions.DependencyInjection">
+			<Version>5.0.1</Version>
+		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
+		  <Version>3.1.0</Version>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'net462'">
+		<PackageReference Include="Autofac.Extensions.DependencyInjection">
+			<Version>5.0.1</Version>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.2'">
+		<PackageReference Include="Autofac.Extensions.DependencyInjection">
+			<Version>5.0.1</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
+		  <Version>3.1.0</Version>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.0'">
+		<PackageReference Include="Autofac.Extensions.DependencyInjection">
+			<Version>5.0.1</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
+		  <Version>3.1.0</Version>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
+		<PackageReference Include="Autofac.Extensions.DependencyInjection">
+			<Version>5.0.1</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
+		  <Version>3.1.0</Version>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\DevSkill.SSLCommerz.Core\DevSkill.SSLCommerz.Core.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Include="*.*.cs" />
+		<Compile Remove="*.*.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'=='netcoreapp2.2'">
+		<Compile Include="*.netcore22.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
+		<Compile Include="*.netcore31.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
+	    <Version>3.1.0</Version>
+	  </PackageReference>
 	</ItemGroup>
 
 </Project>
