--- a/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
+++ b/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
@@ -12,10 +12,13 @@
 		<PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
 	</ItemGroup>
 
-	<ItemGroup Condition="'$(TargetFramework)'=='netstandard20'">  
+	<ItemGroup Condition="'$(TargetFramework)'=='netstandard20'">
 		<PackageReference Include="Autofac.Extensions.DependencyInjection">
 			<Version>5.0.1</Version>
-		</PackageReference>		   
+		</PackageReference>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
+			<Version>3.1.0</Version>
+		</PackageReference>
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
@@ -24,7 +27,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.0" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-		  <Version>3.1.0</Version>
+			<Version>3.1.0</Version>
 		</PackageReference>
 	</ItemGroup>
 
@@ -39,7 +42,7 @@
 			<Version>5.0.1</Version>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-		  <Version>3.1.0</Version>
+			<Version>3.1.0</Version>
 		</PackageReference>
 	</ItemGroup>
 
@@ -48,7 +51,7 @@
 			<Version>5.0.1</Version>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-		  <Version>3.1.0</Version>
+			<Version>3.1.0</Version>
 		</PackageReference>
 	</ItemGroup>
 
@@ -57,7 +60,7 @@
 			<Version>5.0.1</Version>
 		</PackageReference>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-		  <Version>3.1.0</Version>
+			<Version>3.1.0</Version>
 		</PackageReference>
 	</ItemGroup>
 
@@ -68,20 +71,30 @@
 	<ItemGroup>
 		<None Include="*.*.cs" />
 		<Compile Remove="*.*.cs" />
+	</ItemGroup> 
+
+	<ItemGroup Condition="'$(TargetFramework)'=='net45'">
+		<Compile Include="*.net45.cs" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'=='net46'">
+		<Compile Include="*.net46.cs" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'=='netcoreapp2.2'">
-		<Compile Include="*.netcore22.cs" />
+		<Compile Include="*.netcore22.cs" />   
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.0'">
+		<Compile Include="*.netcore30.cs" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'=='netcoreapp3.1'">
 		<Compile Include="*.netcore31.cs" />
-	</ItemGroup>
+	</ItemGroup>	
 
-	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions">
-	    <Version>3.1.0</Version>
-	  </PackageReference>
+	<ItemGroup>
+		<Compile Include="*.common.cs" />
 	</ItemGroup>
 
 </Project>
