--- a/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
+++ b/.net/src/DevSkill.SSLCommerz/DevSkill.Extensions.SSLCommerz.DependencyInjection/DevSkill.Extensions.SSLCommerz.DependencyInjection.csproj
@@ -3,9 +3,9 @@
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp2.2;netcoreapp3.0;netcoreapp3.1;net45;net46;</TargetFrameworks>
 		<PackageVersion>$(Version)</PackageVersion>
-		<AssemblyVersion>1.0.0.6</AssemblyVersion>
-		<FileVersion>1.0.0.6</FileVersion>
-		<Version>1.0.0.6-preview3</Version>
+		<AssemblyVersion>1.0.0.7</AssemblyVersion>
+		<FileVersion>1.0.0.7</FileVersion>
+		<Version>1.0.0.7-preview3</Version>
 		<EnableDefaultContentItems>false</EnableDefaultContentItems>
 		<Authors>Rafsanul Hasan</Authors>
 		<Company>Dev Skill</Company>
@@ -14,7 +14,6 @@
 
 	<ItemGroup>
 		<PackageReference Include="Autofac" Version="4.9.4" />
-		<PackageReference Include="Devskill.SSLCommerz.Core" Version="1.0.0.18-preview1" />
 		<PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
 	</ItemGroup>
 
@@ -93,6 +92,14 @@
 
 	<ItemGroup Condition="'$(TargetFramework)'=='net46'">
 		<Compile Include="*.net46.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Compile Include="*.common.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\DevSkill.SSLCommerz.Core\DevSkill.SSLCommerz.Core.csproj" />
 	</ItemGroup>
 
 </Project>
